--- a/chatbot.htm
+++ b/chatbot.htm
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-  <title>Untitled</title>
+  <title>Askimo</title>
   <meta name="viewport" content="width = device-width,maximum-scale=1,user-scalable=no">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <style>
