--- a/chatbot.htm
+++ b/chatbot.htm
@@ -5,7 +5,7 @@
 <head>
   <title>Askimo</title>
   <meta name="viewport" content="width = device-width,maximum-scale=1,user-scalable=no">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  
   <style>
   .umsg {
   border: 2px solid #dedede;
@@ -31,7 +31,7 @@
   border-radius: 5px;
   width: 200px;
   position: relative;
-  left: 15%;
+  left: 25%;
   box-shadow: 0 2px 1px rgba(0,0,0,0.09),
               0 4px 2px rgba(0,0,0,0.09),
               0 8px 4px rgba(0,0,0,0.09),
@@ -45,7 +45,7 @@ body {
   background-size: cover;
   background-position: center center;
   height: 100%;
-  width: 100%;
+  
 
 
 }
@@ -66,11 +66,11 @@ body {
 }
 #container {
     position: absolute;
-    top: 75px;
+    top: 50px;
     bottom: 50px;
-    width: 100%;
+    width: 90%;
     overflow: auto;
-     margin: 5px;
+    margin: 5px;
 }
 
 #search{
@@ -113,7 +113,7 @@ body {
 #info,#back{
    position: fixed;
     right: 20px;
-    top: 15px;
+    top: 10px;
     margin: 5px;
     font-weight: bold;
     font-size: large;
@@ -141,17 +141,19 @@ body {
  <img  id = "sendimg" src="https://www.dropbox.com/s/rsqcn0ujk4p5gr0/send.png?raw=1" onclick = "fetch()" alt="" />
  </div>
  </article>
- <article id ="main2">
+ <article id ="main2" style = "margin: 5px" >
  <p id = "back" onclick ="back()">&larr;</p>
  <p style="text-align: center; font-weight: bold">Askimo</p>
  <ul  style="font-style: italic">
-  <li>Askimo is a user interactive chatbot powered by wikpedia</li>
-  <li>You can ask a lot questions or about topic you want to know</li>
+  <li>Askimo is an user interactive chatbot powered by wikipedia.</li>
+  <li>You can ask a lot of questions about topic you want to know</li>
   <li>Askimo will fetch results for you.</li>
-  <li>Use spaces betweeb two words so that Askimo recognizes your request</li>
-  <li>Ask questions like "Tell about mars" or "what is virus" or "who is virat kohli" and so on.</li>
-  <li> You can ask as much of questions as you need</li>
-  <li>If any error or any suggesstions kindly notify me so that I can update for better performance</li>
+  <li>Use spaces between two words so that Askimo recognizes your request. 
+ </li>
+  <li>Ask questions like <b>"Tell about mars"</b> or <b>"what is virus"</b> or <b>"who is virat kohli"</b>  or simply type in the topic as <b>"sun"</b> and so on.</li>
+ <li>If any error or any suggesstions kindly notify me so that I can update for better performance.</li>
+  <p>~ Done by Sundar ~</p>
+  <p>~ Special mention: <u>Agilan</u> ~</p>
  </ul>
  </article>
 </body>
