--- a/index.htm
+++ b/index.htm
@@ -320,7 +320,7 @@ table:hover,
             </tr>
             <tr>
                 <td style="font-weight: bold">E-mail:</td>
-                <td><a href="sundarlinga6@gmail.com">  sundarlinga6@gmail.com</a></td>
+                <td><a href="mailto:sundarlinga6@gmail.com">  sundarlinga6@gmail.com</a></td>
             </tr>
             <tr>
                 <td style="font-weight: bold">Mobile-no:</td>
