--- a/index.htm
+++ b/index.htm
@@ -320,7 +320,7 @@ table:hover,
             </tr>
             <tr>
                 <td style="font-weight: bold">E-mail:</td>
-                <td><a href="mailto:sundarlinga6@gmail.com">  sundarlinga6@gmail.com</a></td>
+                <td><a href="sundarlinga6@gmail.com">  sundarlinga6@gmail.com</a></td>
             </tr>
             <tr>
                 <td style="font-weight: bold">Mobile-no:</td>
@@ -383,51 +383,9 @@ class Projects extends React.Component {
         super();
         //project datas
         this.state = {
-            project:[{
-                id: 1,
-                title: "Askimo",
-                category: "(Web)",
-                description: "User Interactive chatbot that searches through wikipedia",
-                used:  ["Wikipedia Rest-API",
-                        "Stopword - filtering","Vannila-JS"
-                        ],
-                link: "https://sundar-2000.github.io/chatbot/",
-                repo: "https://github.com/sundar-2000/chatbot"
-              },
+            project:[
               {
-                id: 2,
-                title: "Justpay",
-                category: "(Web)",
-                description: "A mobile payment app that has login and sign-in feature",
-                used:  ["Firebase RTDatabase",
-                        "Neumorphic UI"
-                        ],
-                link: "https://sundar-2000.github.io/justpay/",
-                repo: "https://github.com/sundar-2000/justpay"
-              },
-              {
-                id: 3,
-                title: "Weather-App",
-                category: "(Web)",
-                description: "Webapp to know the weather of any area",
-                used:  ["Openweathermap-API",
-                        "Darkmode"
-                        ],
-                link: "https://sundar-2000.github.io/weatherapp/",
-                repo: "https://github.com/sundar-2000/weatherapp"
-              },
-               {
-                id: 4,
-                title: "Handcricket",
-                category: "(Web)",
-                description: "Play handcricket with bot and relive your childhood",
-                used:  ["Vannila-JS"
-                        ],
-                link: "https://sundar-2000.github.io/handcricket/",
-                repo: "https://github.com/sundar-2000/handcricket"
-              },
-               {
-                id: 5,
+                id: 7,
                 title: "News-App",
                 category: "(Android/ios)",
                 description: "Know the headlines and search through old articles",
@@ -440,6 +398,49 @@ class Projects extends React.Component {
               },
               {
                 id: 6,
+                title: "Askimo",
+                category: "(Web)",
+                description: "User Interactive chatbot that searches through wikipedia",
+                used:  ["Wikipedia Rest-API",
+                        "Stopword - filtering","Vannila-JS"
+                        ],
+                link: "https://sundar-2000.github.io/chatbot/",
+                repo: "https://github.com/sundar-2000/chatbot"
+              },
+              {
+                id: 5,
+                title: "Justpay",
+                category: "(Web)",
+                description: "A mobile payment app that has login and sign-in feature",
+                used:  ["Firebase RTDatabase",
+                        "Neumorphic UI"
+                        ],
+                link: "https://sundar-2000.github.io/justpay/",
+                repo: "https://github.com/sundar-2000/justpay"
+              },
+              {
+                id: 4,
+                title: "Weather-App",
+                category: "(Web)",
+                description: "Webapp to know the weather of any area",
+                used:  ["Openweathermap-API",
+                        "Glassmorphism"
+                        ],
+                link: "https://sundar-2000.github.io/weatherapp/",
+                repo: "https://github.com/sundar-2000/weatherapp"
+              },
+              {
+                id: 3,
+                title: "Handcricket",
+                category: "(Web)",
+                description: "Play handcricket with bot and relive your childhood",
+                used:  ["Vannila-JS"
+                        ],
+                link: "https://sundar-2000.github.io/handcricket/",
+                repo: "https://github.com/sundar-2000/handcricket"
+              },
+              {
+                id: 2,
                 title: "Greenhouse Monitoring",
                 category: "(Electronics)",
                 description: "Monitors soil moisture and temperature",
@@ -452,7 +453,7 @@ class Projects extends React.Component {
 
               },
               {
-                id: 7,
+                id: 1,
                 title: "DTMF Decoder",
                 category: "(Electronics)",
                 description: "Use your phone as a switch for electrical devices",
