--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width,initialscale=1,maximum-scale=1,user-scalable=no">
   <meta name="title" content="Sundar's Resume">
   <meta name="description" content="Visit my website to know about me">
-  <title>Sundar's Resume</title>
+  <title>Sundar</title>
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://sundar-2000.github.io/">
@@ -462,7 +462,7 @@
     </div>
   </div>
   <div id="footer" style="background: #212529;">
-    <div id="cright" style="align-self: center;font-weight: 600;">
+    <div id="cright" style="align-self: center;font-weight: 600;text-align: center;">
       Made with ❤️ by Sundar
     </div>
     <div id="explore">
@@ -487,13 +487,13 @@
         Connect
       </div>
       <div style="padding-top: 1rem;">
-        <a href="https://github.com/sundar-2000"><i class="fab fa-github"></i> Github</a>
+        <a href="https://github.com/sundar-2000" target="_blank"><i class="fab fa-github"></i> Github</a>
       </div>
       <div>
-        <a href="https://www.instagram.com/s._u._n._d._a._r/"><i class="fab fa-instagram"></i> Instagram</a>
+        <a href="https://www.instagram.com/s._u._n._d._a._r/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
       </div>
       <div>
-        <a href="https://www.linkedin.com/in/sundara-lingam-70b363191/"><i class="fab fa-linkedin"></i> LinkedIn</a>
+        <a href="https://www.linkedin.com/in/sundara-lingam-70b363191/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
       </div>
     </div>
   </div>
