--- a/index.htm
+++ b/index.htm
@@ -354,7 +354,7 @@
         <img src="assets/react.png" alt="React"><span class="txt"><br>Native</span>
       </div>
       <div class="icon">
-        <img src="assets/react.png" alt="python"><span class="txt"><br>Python</span>
+        <img src="assets/python.png" alt="python"><span class="txt"><br>Python</span>
       </div>
       <div class="icon">
         <img src="assets/bootstrap.png" alt="bootstrap"><span class="txt"><br>Bootstrap</span>
@@ -529,7 +529,7 @@
                 id: 5,
                 title: "News-App",
                 category: "(Android/ios)",
-                description: "Know the headlines and search through old articles",
+                description: "Read , Share and search for news articles",
                 used:  ["React-Native",
                         "Googlenews-api",
                         "Darkmode"
@@ -543,7 +543,7 @@
                 category: "(Web)",
                 description: "User Interactive chatbot that scrolls through wikipedia",
                 used:  ["Wikipedia Rest-API",
-                        "Stopword - filtering","Vannila-JS"
+                        "Stopword - filtering","Vanilla-JS"
                         ],
                 link: "https://sundar-2000.github.io/chatbot/",
                 repo: "https://github.com/sundar-2000/chatbot"
