--- a/index.htm
+++ b/index.htm
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta name="google-site-verification" content="DKRl8r7LJOlfJVdM85Jb_nq48pAI6waXulv849oiDqU" />
   <link rel="shortcut icon" type="image/jpg" href="assets/slogo.png">
   <meta name="viewport" content="width=device-width,initialscale=1,maximum-scale=1,user-scalable=no">
   <meta name="title" content="Sundar's Resume">
