--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <meta name="google-site-verification" content="DKRl8r7LJOlfJVdM85Jb_nq48pAI6waXulv849oiDqU" />
   <link rel="shortcut icon" type="image/jpg" href="assets/slogo.png">
   <meta name="viewport" content="width=device-width,initialscale=1,maximum-scale=1,user-scalable=no">
@@ -192,6 +192,7 @@
   .projcont
   {
     border-radius: 20px;
+    border: 0.5px solid rgba(0,0,0,0.15);
     padding: 1.5rem;
     flex-direction: row;
     display: inline-block;
@@ -405,10 +406,10 @@
         <div style="text-align: center; font-weight: bold;color:#000">
           Achievements
         </div>
-        <ul class="txt" style="color:#000; font-weight: normal; padding-top: 20px;padding-right: 20px">
+        <ul class="txt" style="color:#000; font-weight: normal; padding-top: 20px;padding-right: 20px;text-align: left;">
           <li>Certificate of Brilliance in AITSE</li>
           <li>Cleared NISO twice with AIR 4 & 5</li>
-          <li>Reginoal Second place in TMAQ</li>
+          <li>Regional Second place in TMAQ</li>
         </ul>
       </div>
     </div>
@@ -457,7 +458,7 @@
         </tr>
         <tr>
           <td style="font-weight: bold">Hobbies:</td>
-          <td>Quizzing & Gaming</td>
+          <td>Quizzing & Photography</td>
         </tr>
       </table>
     </div>
@@ -499,7 +500,6 @@
     </div>
   </div>
   <script>
-
   $('.navbar-nav>li>a').on('click', function() {
     $('.navbar-collapse').collapse('hide');
     });
@@ -555,7 +555,7 @@
                 category: "(Web)",
                 description: "A webapp to simulate mobile payment",
                 used:  ["Firebase RTDatabase",
-                        "Neumorphic UI"
+                        "Bootstrap"
                         ],
                 link: "https://sundar-2000.github.io/justpay/",
                 repo: "https://github.com/sundar-2000/justpay"
