--- a/index.htm
+++ b/index.htm
@@ -495,7 +495,7 @@
         <a href="https://www.instagram.com/s._u._n._d._a._r/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
       </div>
       <div>
-        <a href="https://www.linkedin.com/in/sundara-lingam-70b363191/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
+        <a href="https://www.linkedin.com/in/sundara-lingam/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
       </div>
     </div>
   </div>
