--- a/index.htm
+++ b/index.htm
@@ -382,11 +382,11 @@
           <td>MARK-SCORED</td>
         </tr>
         <tr>
-          <td><span style="text-decoration: overline">B.E. (ECE)</span></td>
+          <td>B.E. (ECE)</td>
           <td>Madras Institute of Technology,<br>
           Anna University</td>
-          <td>2022<br>(Expected)</td>
-          <td>CGPA 9.1</td>
+          <td>2022<br></td>
+          <td>CGPA 9.2</td>
         </tr>
         <tr>
           <td>HSLC</td>
